fix: 모임 선택지 조회에서 placeId가 아닌 placeSlotId로 수정